--- a/TestBench.html
+++ b/TestBench.html
@@ -50,7 +50,7 @@ dhclient</code></pre>
     User user
     # substitute address of your testbench
     HostName 192.168.123.45</code></pre>
-<p>Then connect to your testbench and paste newly generated <code>id_ecdsa</code> to <code>.ssh/authorized_keys</code> on testbench so you can log in without entering password every time.</p>
+<p>Then connect to your testbench and paste newly generated <code>id_ecdsa.pub</code> to <code>.ssh/authorized_keys</code> on testbench so you can log in without entering password every time.</p>
 <h3 id="Scripting">Scripting</h3>
 <p>This step is optional, but very helpful. Put these scripts somewhere in your <code>${PATH}</code>, like <code>/usr/local/bin</code>.</p>
 <p><code>qtb-runtests</code>:</p>
