--- a/QubesSecurity.html
+++ b/QubesSecurity.html
@@ -1,6 +1,7 @@
 <h1 id="QubesSecurity">Qubes Security</h1>
 <ul>
 <li><a href="/wiki/wiki/SecurityPage">Reporting Security Issues in Qubes OS</a></li>
+<li><a href="/wiki/wiki/SecurityPack">Qubes Security Pack</a></li>
 <li><a href="/wiki/wiki/SecurityBulletins">Qubes Security Bulletins</a></li>
 <li><a href="/wiki/wiki/SecurityGoals">Qubes Security Goals</a></li>
 <li><a href="/wiki/wiki/VerifyingSignatures">On digital signatures and how to verify Qubes keys and downloads</a></li>
