--- a/SecurityBulletins.html
+++ b/SecurityBulletins.html
@@ -1,4 +1,5 @@
 <h1 id="QubesSecurityBulletins">Qubes Security Bulletins</h1>
+<p>Qubes Security Bulletins are published through the <a href="/wiki/wiki/SecurityPack">Qubes Security Pack</a>.</p>
 <h2 id="a2010">2010</h2>
 <ul>
 <li>None</li>
