--- a/SecurityPack.html
+++ b/SecurityPack.html
@@ -190,7 +190,7 @@ gpg&gt; q</code></pre></li>
 <p><strong>Important!</strong></p>
 </blockquote>
 <blockquote>
-<p>In order to verify the authenticity of the Qubes Master Signing Key prior to trusting it, you should obtain the Qubes Master Signing Key fingerprint from a source (ideally, multiple sources) <em>other than</em> this website and visually compare it (them) to the fingerprint displayed in the preceding step, ensuring they match.</p>
+<p>In order to verify the authenticity of the Qubes Master Signing Key prior to trusting it, you should obtain the Qubes Master Signing Key fingerprint from a trustworthy source (ideally, multiple sources) <em>other than</em> this website and visually compare it (them) to the fingerprint displayed in the preceding step, ensuring they match.</p>
 </blockquote>
 <ol start="4">
 <li><p>Verify and read the canaries.</p>
