--- a/SecurityPack.html
+++ b/SecurityPack.html
@@ -18,7 +18,9 @@
 <li>Other security-related information and announcements (such as key revocations)</li>
 </ul>
 <p>The QSP is located here:</p>
-<pre class="wiki"><code>https://github.com/QubesOS/qubes-secpack</code></pre>
+<blockquote>
+<p><a href="https://github.com/QubesOS/qubes-secpack">​https://github.com/QubesOS/qubes-secpack</a></p>
+</blockquote>
 <h2 id="HistoryandRationale">History and Rationale</h2>
 <p>On 2013-01-05, Joanna Rutkowska announced the QSP and explained its rationale in an <a href="https://groups.google.com/d/msg/qubes-devel/twkOEaMLtNI/lZyGx6_jFCEJ">​email</a> to the qubes-devel list:</p>
 <pre class="wiki"><code>Hello,
