--- a/VerifyingSignatures.html
+++ b/VerifyingSignatures.html
@@ -20,9 +20,46 @@
       Key fingerprint = 427F 11FD 0FAA 4B08 0123  F01C DDFA 1A3E 3687 9494
 uid   Qubes Master Signing Key</code></pre>
 <p>There should also be a copy of this key at the project's main website, in the <a href="/wiki/wiki/SecurityPack">Qubes Security Pack</a>, and in the archives of the project's <a href="https://groups.google.com/forum/#!msg/qubes-devel/RqR9WPxICwg/kaQwknZPDHkJ">​developer</a> and <a href="https://groups.google.com/d/msg/qubes-users/CLnB5uFu_YQ/ZjObBpz0S9UJ">​user</a> mailing lists.</p>
-<p>Once you have obtained the Qubes Master Signing Key (<a href="https://keys.qubes-os.org/keys/qubes-master-signing-key.asc">​`0x36879494`</a>), you should verify the fingerprint of this key very carefully. Then set its trust level to &quot;ultimate&quot; (oh, well), so that it can be used to automatically verify all the keys signed by the Qubes Master Signing Key:</p>
-<pre class="wiki"><code>gpg --edit-key 0x36879494
-and then: fpr, trust, 5, y, q</code></pre>
+<p>Once you have obtained the Qubes Master Signing Key (<a href="https://keys.qubes-os.org/keys/qubes-master-signing-key.asc">​`0x36879494`</a>), you should verify the fingerprint of this key very carefully by obtaining copies of the fingerprint from trustworthy independent sources and comparing them to the downloaded key's fingerprint to ensure they match. Then set its trust level to &quot;ultimate&quot; (oh, well), so that it can be used to automatically verify all the keys signed by the Qubes Master Signing Key:</p>
+<pre class="wiki"><code>$ gpg --edit-key 0x36879494
+gpg (GnuPG) 1.4.18; Copyright (C) 2014 Free Software Foundation, Inc.
+This is free software: you are free to change and redistribute it.
+There is NO WARRANTY, to the extent permitted by law.
+
+
+pub  4096R/36879494  created: 2010-04-01  expires: never       usage: SC  
+                     trust: unknown       validity: unknown
+[ unknown] (1). Qubes Master Signing Key
+
+gpg&gt; fpr
+pub   4096R/36879494 2010-04-01 Qubes Master Signing Key
+ Primary key fingerprint: 427F 11FD 0FAA 4B08 0123  F01C DDFA 1A3E 3687 9494
+
+gpg&gt; trust
+pub  4096R/36879494  created: 2010-04-01  expires: never       usage: SC  
+                     trust: unknown       validity: unknown
+[ unknown] (1). Qubes Master Signing Key
+
+Please decide how far you trust this user to correctly verify other users&#39; keys
+(by looking at passports, checking fingerprints from different sources, etc.)
+
+  1 = I don&#39;t know or won&#39;t say
+  2 = I do NOT trust
+  3 = I trust marginally
+  4 = I trust fully
+  5 = I trust ultimately
+  m = back to the main menu
+
+Your decision? 5
+Do you really want to set this key to ultimate trust? (y/N) y
+
+pub  4096R/36879494  created: 2010-04-01  expires: never       usage: SC  
+                     trust: ultimate      validity: unknown
+[ unknown] (1). Qubes Master Signing Key
+Please note that the shown key validity is not necessarily correct
+unless you restart the program.
+
+gpg&gt; q</code></pre>
 <p>Now you can easily download any of the developer or release signing keys that happen to be used to sign particular ISO, RPM, TGZ files or git tags.</p>
 <p>For example: Qubes OS Release 2 Signing Key (<a href="https://keys.qubes-os.org/keys/qubes-release-2-signing-key.asc">​`0x0A40E458`</a>) is used for all Release 2 ISO images.</p>
 <pre class="wiki"><code>$ gpg --recv-keys 0x3F01DEF49719158EF86266F80C73B9D40A40E458
