--- a/SecurityPack.html
+++ b/SecurityPack.html
@@ -22,7 +22,7 @@
 <p><a href="https://github.com/QubesOS/qubes-secpack">​https://github.com/QubesOS/qubes-secpack</a></p>
 </blockquote>
 <h2 id="HistoryandRationale">History and Rationale</h2>
-<p>On 2013-01-05, Joanna Rutkowska announced the QSP and explained its rationale in an <a href="https://groups.google.com/d/msg/qubes-devel/twkOEaMLtNI/lZyGx6_jFCEJ">​email</a> to the qubes-devel list:</p>
+<p>On 2013-01-05, Joanna Rutkowska announced the QSP and explained its rationale in an <a href="https://groups.google.com/d/msg/qubes-devel/twkOEaMLtNI/lZyGx6_jFCEJ">​email</a> to the Qubes mailing lists:</p>
 <pre class="wiki"><code>Hello,
 
 A new Qubes Security Bulletin has been just released and is available here:
