--- a/SystemDoc.html
+++ b/SystemDoc.html
@@ -26,9 +26,10 @@
 </ol></li>
 <li>Debugging:
 <ol>
-<li><a href="/wiki/wiki/WindowsDebugging">Debugging Windows VMs</a></li>
 <li><a href="/wiki/wiki/Profiling">Profiling python code</a></li>
+<li><a href="/wiki/wiki/TestBench">Test environment in separate machine for automatic tests</a></li>
 <li><a href="/wiki/wiki/SystemDoc/VMInterface">VM-dom0 internal configuration interface</a></li>
+<li><a href="/wiki/wiki/WindowsDebugging">Debugging Windows VMs</a></li>
 </ol></li>
 <li>Building:
 <ol>
