--- a/DevelopmentWorkflow.html
+++ b/DevelopmentWorkflow.html
@@ -68,6 +68,7 @@ vi series-pvops.conf</code></pre>
 <h2 id="CopyingCodetodom0">Copying Code to dom0</h2>
 <p>When developing it is convenient to be able to rapidly test changes. Assuming you're developing Qubes on Qubes, you should be working in a special VM for Qubes and occasionally you will want to transfer code or rpms back to dom0 for testing.</p>
 <p>Here are some handy scripts Marek has shared to facilitate this.</p>
+<p>You may also like to run your <a href="/wiki/wiki/TestBench">test environment on separate machine</a>.</p>
 <h3 id="Syncingdom0files">Syncing dom0 files</h3>
 <p>TODO: edit this script to be more generic</p>
 <pre class="wiki"><code>#!/bin/sh
