--- a/SecurityBulletins.html
+++ b/SecurityBulletins.html
@@ -32,4 +32,5 @@
 <ul>
 <li><a href="https://github.com/QubesOS/qubes-secpack/blob/master/QSBs/qsb-013-2015.txt">​Qubes Security Bulletin #13</a> (Qubes Clipboard Timing Attacks and Qubes Core Python API Inconsistency)</li>
 <li><a href="https://github.com/QubesOS/qubes-secpack/blob/master/QSBs/qsb-014-2015.txt">​Qubes Security Bulletin #14</a> (Race condition in Qubes Inter-VM File-Copy Mechanism)</li>
+<li><a href="https://github.com/QubesOS/qubes-secpack/blob/master/QSBs/qsb-015-2015.txt">​Qubes Security Bulletin #15</a> (Critical Xen Hypervisor Vulnerability (XSA 109))</li>
 </ul>
