--- a/HCL.html
+++ b/HCL.html
@@ -605,6 +605,16 @@
 <p>R2B3</p>
 <p>3.11.1-2</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/UrWYjkHwon8/TPE0XSBiPDQJ">​Avant Garden</a></p>
+<p>Purism Librem 15<br /> (i7-4712MQ, HM87, NVIDIA GT840M)</p>
+<p>Yes</p>
+<p>No</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/WX1IXBFkUwk/M-Xg1e3kieMJ">​read more</a></p>
+<p><a href="https://www.crowdsupply.com/purism/librem-laptop">Todd Weaver</a></p>
+<p>Purism Librem 15<br /> (i7-4770HQ, HM87, Iris Pro 5200)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/WX1IXBFkUwk/M-Xg1e3kieMJ">​read more</a></p>
+<p><a href="https://www.crowdsupply.com/purism/librem-laptop">Todd Weaver</a></p>
 <p>Samsung NP300E7A<br /> (i3-2330M, HM65, HD3000)</p>
 <p>P04ABJ</p>
 <p>Yes</p>
