--- a/HCL.html
+++ b/HCL.html
@@ -82,6 +82,14 @@
 <p>R2B2</p>
 <p><a href="https://groups.google.com/d/topic/qubes-devel/2csjvHia9Rw/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/2csjvHia9Rw/NRsqR0g6wIMJ">​Zrubi</a></p>
+<p>ASUS X750JA<br /> (i7-4700HQ, HM86, HD Graphics 4600)</p>
+<p>X750JB.208</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p>Enable legacy CSM and disable secure boot in BIOS</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/SPpxgzFoAdI/Hg2ui1WYhFMJ">HawKing</a></p>
 <p>ASUS Zenbook UX-31<br /> (i5-2557M, HD 3000)</p>
 <p>Yes</p>
 <p>Yes</p>
