--- a/HCL.html
+++ b/HCL.html
@@ -235,6 +235,14 @@
 <p>3.12.23-1</p>
 <p>problem booting from external drive</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/__kXMAH00cQ/LyU0xL4GQbQJ">Subjunctive Post</a></p>
+<p>Dell XPS 15 L521X<br /> (i7-3632QM, HM77, embedded VGA+GeForce GT 640M)</p>
+<p>A16</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p>Does not visually ask for the password when opted to encrypt the target disk for installation.</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/yDSROimihuY/lsnCcK07huEJ">Marc de Bruin</a></p>
 <p>Dell XPS 17 L701X<br /> (i5-480M, Arrandale, NVIDIA GT 435M)</p>
 <p>A10</p>
 <p>Yes</p>
