--- a/VMSudo.html
+++ b/VMSudo.html
@@ -58,8 +58,7 @@
 </ul></li>
 <li><p>PolicyKit (/etc/polkit-1/rules.d/00-qubes-allow-all.rules):</p>
 <pre class="wiki"><code>//allow any action, detailed reasoning in sudoers.d/qubes
-polkit.addRule(function(action,subject) { return polkit.Result.YES; });</code></pre></li>
-</ol>
+polkit.addRule(function(action,subject) { return polkit.Result.YES; });</code></pre>
 <p>and /etc/polkit-1/localauthority/50-local.d/qubes-allow-all.pkla:</p>
 <pre class="wiki"><code>[Qubes allow all]
 Identity=*
@@ -71,8 +70,7 @@ ResultActive=yes</code></pre>
 <li>NetworkManager configuration from normal user (nm-applet)</li>
 <li>updates installation (gpk-update-viewer)</li>
 <li>user can use pkexec just like sudo Note: above is needed mostly because Qubes user GUI session isn't treated by <a href="/wiki/wiki/PolicyKit">PolicyKit?</a>/logind as &quot;local&quot; session because of the way in which X server and session is started. Perhaps we will address this issue in the future, but this is really low priority. Patches welcomed anyway.</li>
-</ul>
-<ol start="3">
+</ul></li>
 <li>Empty root password
 <ul>
 <li>used for access to 'root' account from text console (xl console) - the only way to access the VM when GUI isn't working</li>
