--- a/HCL.html
+++ b/HCL.html
@@ -503,6 +503,13 @@
 <p>3.12.18-1</p>
 <p>display issues<a href="https://groups.google.com/d/msg/qubes-users/ReLqPcsvDwk/WbJdDUBqgTsJ">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/ReLqPcsvDwk/WbJdDUBqgTsJ">​Lab Man</a></p>
+<p>Lenovo ThinkPad X1 Carbon (3444AZU)<br /> (i5-3317U, Ivy Bridge, HD4000)</p>
+<p>G6ET93WW (2.53 )</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/sWPBlejozwU/w1Z3YT3kM7oJ">Dave C</a></p>
 <p>Lenovo Thinkpad X1 Carbon (3444CTO)<br /> (i5-3427U)</p>
 <p>Yes</p>
 <p>Yes</p>
