--- a/HCL.html
+++ b/HCL.html
@@ -166,6 +166,22 @@
 <p>R2B2</p>
 <p><a href="https://groups.google.com/d/topic/qubes-users/FyA7_Kzw1WA/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/F-jVh62ANak/s57rqUWTY7kJ">Alex​</a></p>
+<p>Dell Latitude E6410<br /> (i5-M560, Arrandale, HD Graphics)</p>
+<p>A16</p>
+<p>Yes</p>
+<p>*</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p>Intel graphics unusable with enabled VT-d</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/lgudSW8yQu8/9kc1cD_aungJ">David</a></p>
+<p>Dell Latitude E6410<br /> (i7-M640, Arrandale, NVS 3100M)</p>
+<p>A16</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p>trusted execution disabled</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/lgudSW8yQu8/pj66q_Z8zTIJ">Pablo Costa</a></p>
 <p>Dell Latitude E6420<br /> (i5-2520M, Sandy Bridge, HD graphics)</p>
 <p>Yes</p>
 <p>Yes</p>
