--- a/HCL.html
+++ b/HCL.html
@@ -315,6 +315,13 @@
 <p>3.12.23-1</p>
 <p><a href="https://groups.google.com/d/topic/qubes-users/q5M9KbPatEA/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/q5M9KbPatEA/fXIZ-yvJVA8J">Dimiter Georgiev</a></p>
+<p>HP EliteBook 8460p<br /> (i5-2520M, Sandy Bridge, HD Graphics)</p>
+<p>68SCF Ver. F.08</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/Fs6wwffU8oI/S5id3KxxUpwJ">Shane Layton</a></p>
 <p>HP EliteBook 8540p<br /> (i5-2540M, Arrandale, NVIDIA GT216)</p>
 <p>F.0C</p>
 <p>Yes</p>
