--- a/HCL.html
+++ b/HCL.html
@@ -351,6 +351,11 @@
 <p><a href="https://groups.google.com/d/msg/qubes-devel/ZC_SQJhXVOM/4aLjEc7GIsUJ">​Stephen Boyd</a></p>
 <p>R2B2</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/ZC_SQJhXVOM/4aLjEc7GIsUJ">Stephen Boyd</a></p>
+<p>Lenovo IdeaPad Y500<br /> (i5-3230M, unknown, GT650M-SLI)</p>
+<p>No</p>
+<p>R2</p>
+<p>Not able to install</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/k9hX_QIut2s/DMkWQp7b1_AJ">Christoph Wendler</a></p>
 <p>Lenovo IdeaPad Y580<br /> (unknown, HM76 Express, HD Graphics)</p>
 <p>No</p>
 <p>R2rc2</p>
