--- a/HCL.html
+++ b/HCL.html
@@ -762,6 +762,12 @@
 <p>3.12.23-1</p>
 <p>Qubes installation does not work, but running an installed system with some tweaks does.</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/sA2JuEEQbdg/kpvaVuMCiFQJ">Miłosław Smyk</a></p>
+<p>ASUS ROG CG8565<br /> (unknown, Z68, HD Graphics+GTX590/GTX560Ti)</p>
+<p>No</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p>Qubes installation does not work.</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/sNdZLeeRei4/OFFNTCQ8gz8J">c.hellbom</a></p>
 <p>Dell Inspiron 660<br /> (i5-3330, Xeon E3-1200 Graphics)</p>
 <p>A09</p>
 <p>Yes</p>
