--- a/HCL.html
+++ b/HCL.html
@@ -782,6 +782,14 @@
 <p>R2</p>
 <p>3.12.23-1</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/JQ-EQfuQIXA/Xg1uEMJyplcJ">​Nate Bedrossian</a></p>
+<p>Dell Optiplex 780<br /> (Q6600, Q45, HD Graphics)</p>
+<p>*</p>
+<p>*</p>
+<p>*</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p>Qubes installation does not work. VT-x/VT-d/TPM present-untested</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/xjwpuPKcxIE/aprxY8YLQSIJ">hsgqq7h02</a></p>
 <p>Dell PowerEdge T110 II<br /> (Xeon E3-1230, onboard Matrox)</p>
 <p>Yes</p>
 <p>R1</p>
