--- a/HCL.html
+++ b/HCL.html
@@ -543,7 +543,7 @@
 <p>Yes</p>
 <p>R2B2</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/UCuF41rq758/BRhc7lTecsMJ">Ulrich Pfeifer</a></p>
-<p>Lenovo X1 Carbon Gen 2<br /> (i5-4300U, Haswell-ULT, HD4000)</p>
+<p>Lenovo Thinkpad X1 Carbon Gen 2<br /> (i5-4300U, Haswell-ULT, HD4000)</p>
 <p>1.07</p>
 <p>No</p>
 <p>No</p>
@@ -551,7 +551,7 @@
 <p>3.11.1-2</p>
 <p>needs iwl7260-firmware in netvm</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/cu_mJa4iDHk/v1FdT3ZGofEJ">​Patrick Schless</a></p>
-<p>Lenovo X1 Carbon Gen 2<br /> (i7-4600U, Haswell-ULT, HD4000)</p>
+<p>Lenovo Thinkpad X1 Carbon Gen 2<br /> (i7-4600U, Haswell-ULT, HD4000)</p>
 <p>1.11</p>
 <p>Yes</p>
 <p>Yes</p>
@@ -559,6 +559,15 @@
 <p>3.11.1-2</p>
 <p>needs iwl7260-firmware in netvm</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/cu_mJa4iDHk/v1FdT3ZGofEJ">​Jean-François Rioux</a></p>
+<p>Lenovo Thinkpad X1 Carbon (20BSCTO1WW)<br /> (i5-5200U, Broadwell-U, HD5500)</p>
+<p>N14ET25W (1.03 )</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>*</p>
+<p>R2</p>
+<p>3.18.5-101</p>
+<p>graphics not supported with R2 kernel, install with kickstart file and use 3.18 kernel, TPM present-untested</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/-9qRHSkwfy8/CCx08nnTVEAJ">george</a></p>
 <p>Lenovo Thinkpad X61t<br /> ()</p>
 <p>R2B1</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/4IrF1A6sa3U/QIQe-dNc4tEJ">​George Walker</a></p>
